feat(devsecops): expand Weeks 1-2 foundation to textbook-level depth
Week 1 - DevSecOps Orientation:
- Comprehensive DevSecOps philosophy and principles
- Industry transformation case studies (Netflix, Amazon, Microsoft)
- Enterprise toolchain integration strategies
- Cultural transformation and organizational change
- Security-first mindset development

Week 2 - Jenkins Architecture:
- Deep dive into Jenkins master-agent architecture
- Advanced plugin ecosystem and management
- Enterprise security configuration
- Performance optimization and scaling strategies
- Production deployment best practices

Educational Enhancement:
- Real-world enterprise examples and case studies
- Hands-on exercises with multiple difficulty levels
- Comprehensive troubleshooting guides
- Industry best practices and patterns
- Professional assessment criteria

Total content expansion: Foundation level → Enterprise handbook level
Character growth: Substantial increase in educational depth and practical value